[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scripts/Intro.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/oak.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/boy.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/girl.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/keyboard_ui.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/select_squirtle.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/select_charmander.png" id="7"]
[ext_resource type="Texture2D" path="res://assets/select_bulbasaur.png" id="8"]
[ext_resource type="Texture2D" path="res://assets/select_pikachu.png" id="9"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.941176, 0.941176, 1, 1)

[node name="OakImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 250.0
grow_horizontal = 2
texture = ExtResource("2")
ignore_texture_size = true
stretch_mode = 5

[node name="CenterContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2

[node name="GenderSelection" type="HBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BtnBoy" type="TextureButton" parent="CenterContainer/GenderSelection"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
texture_normal = ExtResource("3")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/GenderSelection/BtnBoy"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "남자"
horizontal_alignment = 1

[node name="BtnGirl" type="TextureButton" parent="CenterContainer/GenderSelection"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
texture_normal = ExtResource("4")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/GenderSelection/BtnGirl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "여자"
horizontal_alignment = 1

[node name="NameInput" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/NameInput"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "이름을 입력하세요"
alignment = 1
max_length = 6

[node name="KeyboardGrid" type="GridContainer" parent="CenterContainer/NameInput"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 10

[node name="BtnConfirm" type="Button" parent="CenterContainer/NameInput"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "확인"

[node name="StarterSelection" type="HBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BtnSquirtle" type="TextureButton" parent="CenterContainer/StarterSelection"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("6")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/StarterSelection/BtnSquirtle"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "꼬부기"
horizontal_alignment = 1

[node name="BtnCharmander" type="TextureButton" parent="CenterContainer/StarterSelection"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("7")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/StarterSelection/BtnCharmander"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "파이리"
horizontal_alignment = 1

[node name="BtnBulbasaur" type="TextureButton" parent="CenterContainer/StarterSelection"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("8")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/StarterSelection/BtnBulbasaur"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "이상해씨"
horizontal_alignment = 1

[node name="BtnPikachu" type="TextureButton" parent="CenterContainer/StarterSelection"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("9")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CenterContainer/StarterSelection/BtnPikachu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "피카츄"
horizontal_alignment = 1

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogLabel" type="Label" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 20.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "..."
autowrap_mode = 3
